stretch task fixed

--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,11 @@ header .logo {
     padding-right: 20px;
 }
 
+/* Button clicker*/
+.buttonClicker {
+    color: red;
+}
+
 /* Contact Styles */
 
 .contact p {
